--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.9.0",
         "laravel/ui": "^4.5.1",
         "laraveles/spanish": "^1.5.0",
+        "paymentez/sdk": "^1.3",
         "pbmedia/laravel-ffmpeg": "^8.4",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^6.3",
