--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "beyondcode/laravel-websockets": "^1.14",
         "dyrynda/laravel-cascade-soft-deletes": "^4.3",
         "guzzlehttp/guzzle": "^7.2",
-        "intervention/image": "^3.4",
+        "intervention/image": "^3.8",
         "intervention/image-laravel": "^1.1",
         "kyslik/column-sortable": "^6.5",
         "laravel/framework": "^10.48.7",
@@ -22,6 +22,7 @@
         "laraveles/spanish": "^1.5.0",
         "paymentez/sdk": "^1.3",
         "pbmedia/laravel-ffmpeg": "^8.4",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^6.3",
         "spatie/pdf-to-image": "^2.2"
